--- a/app/src/main/res/layout/activity_tareas_pendientes.xml
+++ b/app/src/main/res/layout/activity_tareas_pendientes.xml
@@ -37,4 +37,15 @@
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/mascota"
+        android:layout_width="131dp"
+        android:layout_height="129dp"
+        android:layout_marginTop="92dp"
+        android:layout_marginEnd="252dp"
+        android:scaleType="fitXY"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_telito" />
 </android.support.constraint.ConstraintLayout>
