--- a/app/src/main/res/layout/activity_tareas_pendientes.xml
+++ b/app/src/main/res/layout/activity_tareas_pendientes.xml
@@ -14,17 +14,18 @@
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.673"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.162" />
+        app:layout_constraintVertical_bias="0.17" />
 
     <Button
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="36dp"
-        android:text="Button"
+        android:onClick="regresar"
+        android:text="@string/buttonRegresar"
         app:layout_constraintStart_toStartOf="@+id/textView"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
@@ -41,13 +42,24 @@
 
     <ImageView
         android:id="@+id/mascota"
-        android:layout_width="137dp"
-        android:layout_height="114dp"
-        android:layout_marginTop="84dp"
-        android:layout_marginEnd="236dp"
+        android:layout_width="109dp"
+        android:layout_height="89dp"
+        android:layout_marginTop="116dp"
+        android:layout_marginEnd="284dp"
+        android:onClick="cambioSecreto"
         android:scaleType="fitXY"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_telito" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:text="0"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
