--- a/app/src/main/res/layout/activity_tareas_pendientes.xml
+++ b/app/src/main/res/layout/activity_tareas_pendientes.xml
@@ -6,6 +6,81 @@
     android:layout_height="match_parent"
     tools:context="com.example.tel306.TareasPendientes">
 
+    <ScrollView
+        android:layout_width="284dp"
+        android:layout_height="148dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.491"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonAgregar"
+        app:layout_constraintVertical_bias="0.438">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <CheckBox
+                android:id="@+id/check1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/vacio"
+                tools:visibility="gone" />
+
+            <CheckBox
+                android:id="@+id/check2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/vacio"
+                tools:visibility="gone" />
+
+            <CheckBox
+                android:id="@+id/check3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/vacio"
+                tools:visibility="gone" />
+
+            <CheckBox
+                android:id="@+id/check4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/vacio"
+                tools:visibility="gone" />
+
+            <CheckBox
+                android:id="@+id/check5"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/vacio"
+                tools:visibility="gone" />
+
+            <CheckBox
+                android:id="@+id/check6"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/vacio"
+                tools:visibility="gone" />
+
+            <CheckBox
+                android:id="@+id/check7"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/vacio"
+                tools:visibility="gone" />
+
+            <CheckBox
+                android:id="@+id/check8"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/vacio"
+                tools:visibility="gone" />
+        </LinearLayout>
+
+
+    </ScrollView>
+
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
