--- a/app/src/main/res/layout/activity_agregar_usuario.xml
+++ b/app/src/main/res/layout/activity_agregar_usuario.xml
@@ -22,15 +22,15 @@
         android:id="@+id/textView"
         android:layout_width="92dp"
         android:layout_height="20dp"
-        android:layout_marginTop="52dp"
+        android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         android:text="Especialidad:"
         app:layout_constraintBottom_toTopOf="@+id/radioGroup"
         app:layout_constraintEnd_toEndOf="@+id/contrasenia"
-        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintHorizontal_bias="0.512"
         app:layout_constraintStart_toStartOf="@+id/contrasenia"
-        app:layout_constraintTop_toBottomOf="@+id/contrasenia"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/codigo"
+        app:layout_constraintVertical_bias="1.0" />
 
     <EditText
         android:id="@+id/nombre"
@@ -105,9 +105,25 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         android:text="TextView"
         android:visibility="invisible"
-        tools:layout_editor_absoluteX="165dp"
-        tools:layout_editor_absoluteY="544dp" />
+        app:layout_constraintBottom_toTopOf="@+id/buttonAgregar"
+        app:layout_constraintEnd_toEndOf="@+id/radioGroup"
+        app:layout_constraintStart_toStartOf="@+id/radioGroup"
+        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
+
+    <EditText
+        android:id="@+id/codigo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:ems="10"
+        android:hint="Codigo PUCP"
+        android:inputType="number"
+        app:layout_constraintEnd_toEndOf="@+id/contrasenia"
+        app:layout_constraintStart_toStartOf="@+id/contrasenia"
+        app:layout_constraintTop_toBottomOf="@+id/contrasenia" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
